cilium-mesh/httpbin-v2.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: httpbin-v2
  name: httpbin-v2
spec:
  containers:
    - command:
        - /usr/bin/python3
        - /usr/local/bin/gunicorn
        - -b
        - 0.0.0.0:80
        - httpbin:app
        - -k
        - gevent
        - --log-level
        - debug
      image: kennethreitz/httpbin
      imagePullPolicy: IfNotPresent
      name: httpbin
      ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: httpbin-v2
  name: httpbin-v2
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    run: httpbin-v2
  type: ClusterIP
